--- a/templates/permeation.html
+++ b/templates/permeation.html
@@ -70,6 +70,9 @@
         <button type="button" onclick="buttonClicked('Pump_shed3_hot')">Shed3 Pump Hot</button>
     </div>
     <div id="Pump_shed3_hot_onOff">NA</div>
+    <div>
+        <button type="button" onclick="buttonClicked('Pump_main_hot')">Main Pump Hot</button>
+    </div>
 </div>
 </div>
 
