Trying to get Socket Working

--- a/templates/all_control.html
+++ b/templates/all_control.html
@@ -406,6 +406,7 @@
                 <input id="input_SHED2_request" name="input_SHED2_request" type="checkbox" />
                 <label for="input_SHED2_request">SHED2 on/off</label>
             </div>
+            <p> Plot here</p>
             <table width="100%">
                 <tr>
                     <td colspan="4">
@@ -453,7 +454,7 @@
                     </td>
                 </tr>
             </table>
-
+            
             <table>
 
                 <tr>
@@ -595,6 +596,9 @@
                 <input id="input_SHED3_request" name="input_SHED3_request" type="checkbox" />
                 <label for="input_SHED3_request">SHED3 on/off</label>
             </div>
+            <div class="content white">
+                <canvas id="myChart"></canvas>
+              </div>
             <table width="100%">
                 <tr>
                     <td colspan="4">
