--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="static/js/jquery-3.3.1.min.js"></script>
     <script src="static/js/Chart.bundle.js"></script>
+    <script src="static/js/socket.io.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/styles/style.css">
     <link rel="stylesheet" type="text/css" href="/static/styles/checkbox1.css">
     <script type="text/javascript" src="/static/js/loader.js"></script>
