--- a/templates/SHED/index.html
+++ b/templates/SHED/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "SHED/SHED_sidebar.html" %}
 
 {% block content %}
 <script src="static/js/index.js"></script>
