--- a/templates/SHED/maq20_overview.html
+++ b/templates/SHED/maq20_overview.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+{% extends "SHED/SHED_sidebar.html" %}
 
-{% block content %}
+{% block main %}
 <script src="static/js/maq20_overview.js"></script>
 <body class="white_background">
     <div class="maq20_grid">
@@ -27,7 +27,7 @@
         <div id="mod2_6">0.000</div>
         <div id="mod2_7">0.000</div>
     </div>
-    <div class="module">
+    <div class="module">  
         <p>Module 3</p>
         <div id="mod3_0">0.000</div>
         <div id="mod3_1">0.000</div>
