--- a/templates/SHED/all_control.html
+++ b/templates/SHED/all_control.html
@@ -1,12 +1,19 @@
-{% extends "base.html" %}
-{% block content %}
+{% extends "SHED/SHED_sidebar.html" %}
+{% block main%}
 
 <link rel="stylesheet" type="text/css" href="/static/styles/all_health.css">
-
+<link rel="stylesheet" type="text/css" href="/static/styles/style.css">
 <script src="static/js/base.js"></script>
 
+<head>
+    <title>CSS Template</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    </head>
 
-
+<body>
+<div class="content">
 <h2> Permeation SHED Monitoring and Control</h2>
 <p>This page includes the monitoring of all 3 SHEDs as well as the ability to control all adjustable items.</p>
 <p>Limits set on this page will be kept until the application is reset. They will return to the values set in the "config.json" file when the application is restarted</p>
@@ -792,8 +799,8 @@
 
         </div>
     </div>
-
-
+</div>
+</body>
 
 
 
