--- a/templates/SHED/all_health.html
+++ b/templates/SHED/all_health.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %}
-{% block content %}
+{% extends "SHED/SHED_sidebar.html" %}
+{% block main %}
 
 <link rel="stylesheet" type="text/css" href="/static/styles/all_health.css">
 <script src="https://cdn.anychart.com/releases/8.9.0/js/anychart-core.min.js"></script>
