--- a/templates/base.html
+++ b/templates/base.html
@@ -18,15 +18,16 @@
 </head>
 <div class="topnav">
     <a href="#home">Home</a>
-    <a href="maq20_overview.html">MAQ 20</a>
+    <a href="soaktemps">Soak Bay Temperatures</a>
     <!-- <a href="permeation.html">Permeation Testing</a> -->
-    <a href="SHED3">SHED3 Permeation Testing</a>
+    <!-- <a href="SHED3">SHED3 Permeation Testing</a> -->
     <!-- <a href="health">All Health</a> -->
-    <a href="all_control">All System Control</a>
+    <a href="all_control">SHED operation</a>
     <a href="#about">About</a>
-    
-  </div>
+    </div>
 <body>
+  <div style="padding-top:50px;">
     {% block content %} {% endblock %}
+  </div>
 </body>
 </html>
